--- a/package.json
+++ b/package.json
@@ -1,25 +1,31 @@
 {
-  "name": "node-js-getting-started",
-  "version": "0.1.2",
-  "description": "A sample Node.js app using Express 4",
-  "main": "index.js",
+  "private": true,
+  "engines": {
+    "node": ">=0.10.0"
+  },
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
+  },
+  "devDependencies": {
+    "autoprefixer-core": "^5.0.0",
+    "browser-sync": "^1.9.1",
+    "csswring": "^3.0.0",
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-htmlmin": "^1.0.0",
+    "gulp-if": "^1.2.5",
+    "gulp-imagemin": "^2.1.0",
+    "gulp-postcss": "^4.0.3",
+    "gulp-sass": "^1.3.2",
+    "gulp-size": "^1.2.0",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-uglify": "^1.1.0",
+    "gulp-newer": "^0.5.0"
   },
   "dependencies": {
-    "express": "~4.9.x"
-  },
-  "engines": {
-    "node": "0.10.x"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
-  },
-  "keywords": [
-    "node",
-    "heroku",
-    "express"
-  ],
-  "license": "MIT"
+    "body-parser": "^1.11.0",
+    "compression": "^1.4.0",
+    "express": "^4.11.1",
+    "mailchimp": "^1.1.0"
+  }
 }
