--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "body-parser": "^1.11.0",
     "compression": "^1.4.0",
     "express": "^4.11.1",
-    "mailchimp": "^1.1.0"
+    "jade": "^1.9.1",
+    "mailchimp": "^1.1.0",
+    "q": "^1.1.2",
+    "vimeo-api": "^1.1.1"
   }
 }
