--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "express": "^4.11.1",
     "jade": "^1.9.1",
     "mailchimp": "^1.1.0",
+    "nodemon": "^1.3.7",
     "q": "^1.1.2",
+    "underscore": "^1.7.0",
     "vimeo-api": "^1.1.1"
   }
 }
