--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "nodemon": "^1.3.7",
     "q": "^1.1.2",
     "underscore": "^1.7.0",
-    "vimeo-api": "^1.1.1"
+    "vimeo": "^1.1.2"
   }
 }
