--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/GlobalMechanic/global-mechanic-www#readme",
   "devDependencies": {
     "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2017": "^1.4.0",
     "babel-preset-react": "^6.11.1",
@@ -49,6 +50,7 @@
     "react-dom": "^15.2.0",
     "react-router": "^2.5.2",
     "serve-favicon": "^2.3.0",
+    "vimeo": "^1.2.0",
     "winston": "^2.2.0"
   }
 }
