--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch",
-    "dev": "webpack-dev-server --port 5000",
+    "dev": "webpack-dev-server --port 5000 --history-api-fallback",
     "dev-server": "./node_modules/.bin/nodemon ./dist-app"
   },
   "repository": {
@@ -25,13 +25,24 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2017": "^1.4.0",
     "babel-preset-react": "^6.11.1",
+    "bootstrap-loader": "^1.0.10",
+    "bootstrap-sass": "^3.3.6",
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
+    "css-loader": "^0.23.1",
     "eslint": "^3.0.1",
     "eslint-plugin-react": "^5.2.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.3",
     "mocha": "^2.5.3",
+    "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
     "react-hot-loader": "^1.3.0",
+    "resolve-url-loader": "^1.6.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
@@ -39,6 +50,7 @@
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
     "cors": "^2.7.1",
+    "express-history-api-fallback": "^2.0.0",
     "feathers": "^2.0.1",
     "feathers-configuration": "^0.3.0",
     "feathers-errors": "^2.2.0",
