--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js 'test/**/*.@(js|jsx)'",
     "test:watch": "npm run test -- --watch",
-    "dev": "webpack-dev-server --port 5000 --history-api-fallback",
+    "dev": "webpack-dev-server --host 0.0.0.0 --port 5000 --history-api-fallback",
     "dev-server": "./node_modules/.bin/nodemon ./dist-app"
   },
   "repository": {
