--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,7 @@
         "error",
         2
       ],
+      "no-var": "error",
       "linebreak-style": [
         "error",
         "unix"
@@ -38,6 +39,8 @@
   },
     "globals": {
       "is": false,
-      "log": false
+      "log": false,
+      "addEvent": false,
+      "removeEvent": false
     }
 }
