--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
     "feathers-rest": "^1.4.2",
     "immutable": "^3.8.1",
     "is-explicit": "^1.0.4",
-    "react": "^15.2.0",
+    "react": "15.0.1",
     "react-bootstrap": "^0.29.5",
-    "react-dom": "^15.2.0",
+    "react-dom": "15.0.1",
     "react-router": "^2.5.2",
     "serve-favicon": "^2.3.0",
     "vimeo": "^1.2.0",
