--- a/.bootstraprc
+++ b/.bootstraprc
@@ -30,19 +30,19 @@ env:
 # Thus, derived Bootstrap variables can depend on values from here.
 # See the Bootstrap _variables.scss file for examples of derived Bootstrap variables.
 #
-preBootstrapCustomizations: ./src-public/styles/bootstrap-customize.scss
+preBootstrapCustomizations: ./src-client/styles/bootstrap-customize.scss
 
 # This gets loaded after bootstrap/variables is loaded
 # Thus, you may customize Bootstrap variables
 # based on the values established in the Bootstrap _variables.scss file
 #
-#bootstrapCustomizations: ./src-public/styles/bootstrap-customize.scss
+#bootstrapCustomizations: ./src-client/styles/bootstrap-customize.scss
 
 
 # Import your custom styles here
 # Usually this endpoint-file contains list of @imports of your application styles
 #
-appStyles: ./src-public/styles/main.scss
+appStyles: ./src-client/styles/main.scss
 
 
 ### Bootstrap styles
