--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "feathers-rest": "^1.4.2",
     "immutable": "^3.8.1",
     "is-explicit": "^1.0.4",
+    "random-color": "^1.0.1",
     "react": "15.0.1",
     "react-bootstrap": "^0.29.5",
     "react-dom": "15.0.1",
