--- a/package.json
+++ b/package.json
@@ -56,8 +56,10 @@
     "feathers-errors": "^2.2.0",
     "feathers-hooks": "^1.5.4",
     "feathers-rest": "^1.4.2",
+    "freewall": "^1.0.8",
     "immutable": "^3.8.1",
     "is-explicit": "^1.0.4",
+    "jquery": "^3.1.0",
     "random-color": "^1.0.1",
     "react": "15.0.1",
     "react-bootstrap": "^0.29.5",
