--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "app",
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js 'test/**/*.@(js|jsx)'",
-    "test:watch": "npm run test -- --watch",
+    "test-watch": "npm run test -- --watch",
     "dev-client": "webpack-dev-server --host 0.0.0.0 --port 5000 --history-api-fallback",
-    "dev-server": "./node_modules/.bin/nodemon ./dist-server"
+    "dev-server": "./node_modules/.bin/nodemon --watch dist-server ./dist-server "
   },
   "repository": {
     "type": "git",
@@ -59,6 +59,7 @@
     "immutable": "^3.8.1",
     "is-explicit": "^1.0.4",
     "jquery": "^3.1.0",
+    "nedb": "^1.8.0",
     "random-color": "^1.0.1",
     "react": "15.0.1",
     "react-bootstrap": "^0.29.5",
