--- a/package.json
+++ b/package.json
@@ -59,14 +59,13 @@
     "immutable": "^3.8.1",
     "is-explicit": "^1.0.4",
     "jquery": "^3.1.0",
-    "nedb": "^1.8.0",
     "random-color": "^1.0.1",
     "react": "15.0.1",
     "react-bootstrap": "^0.29.5",
     "react-dom": "15.0.1",
     "react-router": "^2.5.2",
     "serve-favicon": "^2.3.0",
-    "vimeo": "^1.2.0",
-    "winston": "^2.2.0"
+    "source-map-support": "^0.4.2",
+    "vimeo": "^1.2.0"
   }
 }
