Video Page now loads vimeo videos
I gotta say, though.
Looks like shit.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -24,6 +24,7 @@
         2
       ],
       "no-var": "error",
+      "prefer-const": "error",
       "linebreak-style": [
         "error",
         "unix"
