--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2017": "^1.4.0",
     "babel-preset-react": "^6.11.1",
-    "bootstrap-loader": "^1.0.10",
+    "bootstrap-loader": "1.0.10",
     "bootstrap-sass": "^3.3.6",
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
