--- a/package.json
+++ b/package.json
@@ -25,8 +25,6 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2017": "^1.4.0",
     "babel-preset-react": "^6.11.1",
-    "bootstrap-loader": "1.0.10",
-    "bootstrap-sass": "^3.3.6",
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
     "css-loader": "^0.23.1",
@@ -38,6 +36,7 @@
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
+    "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.0",
@@ -59,8 +58,10 @@
     "immutable": "^3.8.1",
     "is-explicit": "^1.0.4",
     "jquery": "^3.1.0",
+    "normalize.css": "^4.2.0",
     "random-color": "^1.0.1",
     "react": "15.0.1",
+    "react-addons-css-transition-group": "^15.0.1",
     "react-bootstrap": "^0.29.5",
     "react-dom": "15.0.1",
     "react-router": "^2.5.2",
