--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "is-explicit": "^1.0.4",
     "jquery": "^3.1.0",
     "normalize.css": "^4.2.0",
+    "object-assign": "^4.1.0",
+    "promise-polyfill": "^6.0.2",
     "random-color": "^1.0.1",
     "react": "15.0.1",
     "react-addons-css-transition-group": "^15.0.1",
