--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js 'test/**/*.@(js|jsx)'",
     "test-watch": "npm run test -- --watch",
     "dev-client": "webpack-dev-server --host 0.0.0.0 --port 5000 --history-api-fallback",
-    "dev-server": "./node_modules/.bin/nodemon --watch dist-server ./dist-server "
+    "dev-server": "./node_modules/.bin/nodemon --watch dist-server ./dist-server ",
+    "build-client": "webpack --config ./webpack.production.config.js",
+    "server": "node ./dist-server"
   },
   "repository": {
     "type": "git",
