--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev-client": "webpack-dev-server --host 0.0.0.0 --port 5000 --history-api-fallback",
     "dev-server": "./node_modules/.bin/nodemon --watch dist-server ./dist-server ",
     "build-client": "webpack --config ./webpack.production.config.js",
-    "start": "npm run build-client & node ./dist-server"
+    "start": "node ./dist-server"
   },
   "repository": {
     "type": "git",
