--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js 'test/**/*.@(js|jsx)'",
     "test-watch": "npm run test -- --watch",
-    "dev-client": "webpack-dev-server --host 0.0.0.0 --port 5000 --history-api-fallback",
-    "dev-server": "./node_modules/.bin/nodemon --watch dist-server ./dist-server "
+    "build-client": "rm -rf ./dist-client & webpack --config ./config/webpack.production.js",
+    "build-iso": "babel ./src-iso-modules --out-dir ./dist-iso-modules",
+    "build-server": "babel ./src-server --out-dir ./dist-server",
+    "dev-client": "webpack-dev-server --host 0.0.0.0 --port 5000 --history-api-fallback --config ./config/webpack.dev.js",
+    "dev-server": "npm run build-iso -- --watch & npm run build-server -- --watch & ./node_modules/.bin/nodemon --watch dist-server ./dist-server ",
+    "build": "npm run build-server & npm run build-iso & npm run build-client",
+    "start": "npm run build & node ./dist-server"
   },
   "repository": {
     "type": "git",
@@ -22,6 +27,7 @@
   "devDependencies": {
     "babel-core": "^6.10.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2017": "^1.4.0",
     "babel-preset-react": "^6.11.1",
@@ -31,12 +37,13 @@
     "eslint": "^3.0.1",
     "eslint-plugin-react": "^5.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
+    "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.22.0",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
-    "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
     "resolve-url-loader": "^1.6.0",
     "sass-loader": "^4.0.0",
@@ -49,27 +56,23 @@
     "app-module-path": "^2.1.0",
     "body-parser": "^1.15.2",
     "compression": "^1.6.2",
-    "cors": "^2.7.1",
+    "cors": "^2.8.1",
     "express-history-api-fallback": "^2.0.0",
-    "feathers": "^2.0.1",
-    "feathers-configuration": "^0.3.0",
+    "feathers": "^2.0.2",
+    "feathers-configuration": "^0.3.3",
     "feathers-errors": "^2.2.0",
-    "feathers-hooks": "^1.5.4",
-    "feathers-rest": "^1.4.2",
+    "feathers-hooks": "^1.5.8",
+    "feathers-rest": "^1.5.0",
     "immutable": "^3.8.1",
-    "is-explicit": "^1.0.4",
-    "jquery": "^3.1.0",
+    "is-explicit": "^1.1.0",
     "normalize.css": "^4.2.0",
     "object-assign": "^4.1.0",
     "promise-polyfill": "^6.0.2",
-    "random-color": "^1.0.1",
-    "react": "15.0.1",
-    "react-addons-css-transition-group": "^15.0.1",
+    "react": "^15.3.2",
+    "react-addons-css-transition-group": "^15.3.2",
     "react-bootstrap": "^0.29.5",
-    "react-dom": "15.0.1",
-    "react-router": "^2.5.2",
-    "serve-favicon": "^2.3.0",
-    "source-map-support": "^0.4.2",
-    "vimeo": "^1.2.0"
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1",
+    "sass-loader": "^4.0.2"
   }
 }
