--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js 'test/**/*.@(js|jsx)'",
     "test-watch": "npm run test -- --watch",
     "build-client": "rm -rf ./dist-client & webpack --config ./config/webpack.production.js",
-    "build-iso": "babel ./src-iso-modules --out-dir ./dist-iso-modules",
-    "build-server": "babel ./src-server --out-dir ./dist-server",
+    "build-iso": "rm -rf ./dist-iso-modules & babel ./src-iso-modules --out-dir ./dist-iso-modules",
+    "build-server": "rm -rf ./dist-server & babel ./src-server --out-dir ./dist-server",
     "dev-client": "webpack-dev-server --host 0.0.0.0 --port 5000 --history-api-fallback --config ./config/webpack.dev.js",
     "dev-server": "npm run build-iso -- --watch & npm run build-server -- --watch & ./node_modules/.bin/nodemon --watch dist-server ./dist-server ",
     "build": "npm run build-server & npm run build-iso & npm run build-client",
@@ -31,6 +31,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2017": "^1.4.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
     "css-loader": "^0.23.1",
@@ -70,9 +71,7 @@
     "promise-polyfill": "^6.0.2",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
-    "react-bootstrap": "^0.29.5",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1",
-    "sass-loader": "^4.0.2"
+    "react-router": "^2.8.1"
   }
 }
