--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,11 @@
     "rules": {
       "react/jsx-uses-react": "error",
       "react/jsx-uses-vars": "error",
+      "react/jsx-no-undef": "error",
+      "react/jsx-no-duplicate-props": "error",
+      "react/jsx-boolean-value": "error",
+      "react/jsx-pascal-case": "error",
+      "jsx-quotes": ["error", "prefer-single"],
       "indent": [
         "error",
         2
