--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 node_modules
-master
-test.js
-src-client-old
+
 cache/portfolios.json
 cache/videos.json
+
+dist-server
+dist-iso-modules
+dist-client
