--- a/package.json
+++ b/package.json
@@ -71,9 +71,11 @@
     "normalize.css": "^4.2.0",
     "object-assign": "^4.1.0",
     "promise-polyfill": "^6.0.2",
+    "promise-queue": "^2.2.3",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^2.8.1"
+    "react-router": "^2.8.1",
+    "request": "^2.78.0"
   }
 }
