--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "scripts": {
     "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js 'test/**/*.@(js|jsx)'",
     "test-watch": "npm run test -- --watch",
-    "build-client": "webpack --config ./config/webpack.production.js",
-    "build-iso": "babel ./src-iso --out-dir ./dist-iso",
-    "build-server": "babel ./src-server --out-dir ./dist-server",
-    "dev-client": "webpack-dev-server --host 0.0.0.0 --port 5000 --history-api-fallback --config ./config/webpack.dev.js",
-    "dev-server": "npm run build-server -- --watch & npm run build-iso -- --watch & ./node_modules/.bin/nodemon --watch dist-server  --watch dist-iso ./dist-server ",
-    "build": "rm -rf ./dist-client && rm -rf ./dist-iso && rm -rf ./dist-server && npm run build-server & npm run build-iso & npm run build-client",
+    "build-scss": "node_modules/.bin/babel-node util/build-index-and-variables-scss.js",
+    "build-client": "rm -rf ./dist-client && webpack --config ./config/webpack.production.js",
+    "build-iso": "rm -rf ./dist-iso && babel ./src-iso --out-dir ./dist-iso",
+    "build-server": "rm -rf ./dist-server && babel ./src-server --out-dir ./dist-server",
+    "develop-client": "webpack-dev-server --config ./config/webpack.dev.js",
+    "develop-server": "npm run build-server -- --watch & npm run build-iso -- --watch & ./node_modules/.bin/nodemon --watch dist-server  --watch dist-iso ./dist-server ",
+    "build": "npm run build-server & npm run build-iso & npm run build-client",
     "start": "node -r dotenv/config ./dist-server"
   },
   "repository": {
