--- a/package.json
+++ b/package.json
@@ -66,12 +66,15 @@
     "dotenv": "^2.0.0",
     "express-history-api-fallback": "^2.0.0",
     "feathers": "^2.0.2",
+    "feathers-client": "^1.7.2",
     "feathers-configuration": "^0.3.3",
     "feathers-errors": "^2.2.0",
     "feathers-hooks": "^1.5.8",
+    "feathers-nedb": "^2.6.0",
     "feathers-rest": "^1.5.0",
     "immutable": "^3.8.1",
     "is-explicit": "^1.1.0",
+    "nedb": "^1.8.0",
     "normalize.css": "^4.2.0",
     "object-assign": "^4.1.0",
     "promise-polyfill": "^6.0.2",
