image sync from gears
the website now downloads and caches images from gears

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "feathers-nedb": "^2.6.0",
     "feathers-rest": "^1.5.0",
     "feathers-socketio": "^1.4.2",
+    "fs-promise": "^1.0.0",
     "immutable": "^3.8.1",
     "is-explicit": "^1.1.0",
     "isomorphic-fetch": "^2.2.1",
@@ -80,6 +81,7 @@
     "normalize.css": "^4.2.0",
     "object-assign": "^4.1.0",
     "promise-polyfill": "^6.0.2",
+    "promise-queue": "^2.2.3",
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
