--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
     "request": "^2.78.0",
+    "serve-favicon": "^2.3.2",
     "vimeo": "^1.2.0"
   }
 }
