--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "develop-client": "webpack-dev-server --config ./config/webpack.dev.js",
     "develop-server": "npm run build-server -- --watch & npm run build-iso -- --watch & ./node_modules/.bin/nodemon --watch dist-server  --watch dist-iso ./dist-server ",
     "build": "npm run build-server & npm run build-iso & npm run build-client",
-    "start": "node -r dotenv/config ./dist-server"
+
+    "heroku-postbuild": "npm run build",
+    "start": "node ./dist-server"
   },
   "repository": {
     "type": "git",
