--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "develop-client": "webpack-dev-server --config ./config/webpack.dev.js",
     "develop-server": "npm run build-server -- --watch & npm run build-iso -- --watch & ./node_modules/.bin/nodemon --watch dist-server  --watch dist-iso ./dist-server ",
     "build": "npm run build-server & npm run build-iso & npm run build-client",
-    
     "start": "node ./dist-server"
   },
   "repository": {
@@ -61,6 +60,7 @@
   },
   "dependencies": {
     "app-module-path": "^2.1.0",
+    "aws-sdk": "^2.7.13",
     "body-parser": "^1.15.2",
     "classnames": "^2.2.5",
     "compression": "^1.6.2",
