--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build-server": "rm -rf ./dist-server && node_modules/.bin/babel ./src-server --out-dir ./dist-server",
     "develop-db": "mongod --dbpath ./storage/data",
     "develop-client": "webpack-dev-server --config ./config/webpack.dev.js",
+    "develop-client:production": "NODE_ENV=production-test webpack-dev-server --config ./config/webpack.production-test.js",
     "develop-server": "npm run build-server -- --watch & npm run build-iso -- --watch & ./node_modules/.bin/nodemon --watch dist-server  --watch dist-iso ./dist-server ",
     "build": "npm run build-server & npm run build-iso & npm run build-client",
     "start": "node ./dist-server"
