WIP Showcases added
- image processor now accounts for .svgs
- file server now accounts for .json

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "build-server": "rm -rf ./dist-server && node_modules/.bin/babel ./src-server --out-dir ./dist-server",
     "develop-db": "mongod --dbpath ./storage/data",
     "develop-client": "webpack-dev-server --config ./config/webpack.dev.js",
-    "develop-client:production": "NODE_ENV=production-test webpack-dev-server --config ./config/webpack.production-test.js",
     "develop-server": "npm run build-server -- --watch & npm run build-iso -- --watch & ./node_modules/.bin/nodemon --watch dist-server  --watch dist-iso ./dist-server ",
+    "develop-server:live": "NODE_ENV=production-test; npm run build-server -- --watch & npm run build-iso -- --watch & ./node_modules/.bin/nodemon --watch dist-server  --watch dist-iso ./dist-server ",
     "build": "npm run build-server & npm run build-iso & npm run build-client",
     "start": "node ./dist-server"
   },
@@ -80,6 +80,7 @@
     "immutable": "^3.8.1",
     "is-explicit": "^1.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "jsesc": "^2.4.0",
     "mongodb": "^2.2.12",
     "nedb": "^1.8.0",
     "normalize.css": "^4.2.0",
