--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "file-loader": "^0.9.0",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
+    "json-loader": "^0.5.4",
     "mocha": "^2.5.3",
     "node-sass": "^3.8.0",
     "nodemon": "^1.9.2",
@@ -90,6 +91,7 @@
     "react": "^15.3.2",
     "react-addons-css-transition-group": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-markdown": "^2.4.4",
     "react-router": "^2.8.1",
     "s3fs": "^2.5.0"
   }
