--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.3.2",
+    "babel-loader": "^6.4.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
@@ -39,19 +39,19 @@
     "chai": "^3.5.0",
     "chai-immutable": "^1.6.0",
     "css-loader": "^0.26.2",
-    "eslint": "^3.16.1",
+    "eslint": "^3.17.1",
     "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "^0.10.0",
-    "html-loader": "^0.4.4",
+    "file-loader": "^0.10.1",
+    "html-loader": "^0.4.5",
     "html-webpack-plugin": "^2.28.0",
     "json-loader": "^0.5.4",
     "mocha": "^3.2.0",
     "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
     "react-hot-loader": "^1.3.1",
-    "resolve-url-loader": "^2.0.0",
+    "resolve-url-loader": "^2.0.2",
     "sass-loader": "^6.0.2",
     "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
@@ -60,21 +60,21 @@
   },
   "dependencies": {
     "app-module-path": "^2.2.0",
-    "aws-sdk": "^2.19.0",
-    "body-parser": "^1.16.1",
+    "aws-sdk": "^2.23.0",
+    "body-parser": "^1.17.1",
     "classnames": "^2.2.5",
     "compression": "^1.6.2",
     "cors": "^2.8.1",
     "dotenv": "^4.0.0",
     "express-history-api-fallback": "^2.1.0",
-    "feathers": "^2.0.3",
+    "feathers": "^2.1.1",
     "feathers-authentication": "^0.7.12",
     "feathers-configuration": "^0.4.1",
-    "feathers-errors": "^2.5.0",
-    "feathers-hooks": "^1.7.1",
+    "feathers-errors": "^2.6.1",
+    "feathers-hooks": "^1.8.1",
     "feathers-mongodb": "^2.8.0",
-    "feathers-rest": "^1.6.0",
-    "feathers-socketio": "^1.4.3",
+    "feathers-rest": "^1.7.1",
+    "feathers-socketio": "^1.5.2",
     "fs-promise": "^2.0.0",
     "immutable": "^3.8.1",
     "is-explicit": "^1.1.0",
@@ -89,10 +89,10 @@
     "react": "^15.4.2",
     "react-addons-css-transition-group": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-markdown": "^2.4.4",
-    "react-router": "^3.0.2",
-    "react-router-dom": "^4.0.0-beta.6",
+    "react-markdown": "^2.4.5",
+    "react-router": "^4.0.0-beta.7",
+    "react-router-dom": "^4.0.0-beta.7",
     "s3fs": "^2.5.0",
-    "serve-favicon": "^2.4.0"
+    "serve-favicon": "^2.4.1"
   }
 }
