--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "develop-db": "mongod --dbpath ./storage/data",
     "develop-client": "webpack-dev-server --config ./config/webpack.dev.js",
     "develop-server": "npm run build-server -- --watch & npm run build-iso -- --watch & ./node_modules/.bin/nodemon --watch dist-server  --watch dist-iso ./dist-server ",
-    "build": "npm run build-server && npm run build-iso && npm run build-client",
+    "build": "npm run build-server && npm run build-iso && npm run build-client && cp src-iso/assets/gm-2017-signature.png dist-client/assets/gm-2017-signature.png",
     "start": "node ./dist-server"
   },
   "repository": {
