--- a/package.json
+++ b/package.json
@@ -1,91 +1,80 @@
 {
   "name": "global-mechanic-www",
   "version": "1.0.0",
-  "description": "Global Mechanic Website",
-  "main": "src-iso",
+  "main": "dist",
   "scripts": {
-    "test": "mocha --compilers js:babel-core/register --require ./test/test-helper.js 'test/**/*.@(js|jsx)'",
-    "test-watch": "npm run test -- --watch",
-    "build-scss": "node_modules/.bin/babel-node util/build-index-and-variables-scss.js",
-    "build-client": "rm -rf ./dist-client && webpack --config ./config/webpack.production.js",
-    "build-iso": "rm -rf ./dist-iso && node_modules/.bin/babel ./src-iso --out-dir ./dist-iso",
-    "build-server": "rm -rf ./dist-server && node_modules/.bin/babel ./src-server --out-dir ./dist-server",
-    "develop-db": "mongod --dbpath ./storage/data",
-    "develop-client": "webpack-dev-server --config ./config/webpack.dev.js",
-    "develop-server": "npm run build-server -- --watch & npm run build-iso -- --watch & ./node_modules/.bin/nodemon --watch dist-server  --watch dist-iso ./dist-server ",
-    "develop-server:live": "NODE_ENV=production-test; npm run build-server -- --watch & npm run build-iso -- --watch & ./node_modules/.bin/nodemon --watch dist-server  --watch dist-iso ./dist-server ",
-    "build": "npm run build-server && npm run build-iso && npm run build-client",
-    "start": "node ./dist-server"
+    "test": "mocha --opts .mocha.opts",
+    "build": "rm -rf dist; mkdir dist; babel src --out-dir dist --copy-files",
+    "build:dev": "npm run build -- --watch",
+    "serve": "node dist/scripts/start.js",
+    "serve:dev": "nodemon --watch dist dist/scripts/start.js",
+    "webpack": "webpack --config config/webpack.production.js",
+    "webpack:dev": "webpack-dev-server --config config/webpack.development.js",
+    "lint": "eslint src --fix"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GlobalMechanic/global-mechanic-www.git"
-  },
-  "author": "Ben Gaumond",
+  "keywords": [],
+  "author": "BenZed",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/GlobalMechanic/global-mechanic-www/issues"
-  },
-  "homepage": "https://github.com/GlobalMechanic/global-mechanic-www#readme",
+  "description": "Global Mechanic Website",
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.4.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "chai": "^3.5.0",
-    "chai-immutable": "^1.6.0",
-    "css-loader": "^0.26.4",
-    "eslint": "^3.17.1",
-    "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "^0.10.1",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "json-loader": "^0.5.4",
-    "mocha": "^3.2.0",
-    "node-sass": "^4.5.0",
-    "nodemon": "^1.11.0",
-    "react-hot-loader": "^1.3.1",
-    "resolve-url-loader": "^2.0.2",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.13.2",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.4.1"
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-styled-components": "^1.2.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
+    "css-loader": "^0.28.7",
+    "eslint": "^4.9.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-react": "^7.4.0",
+    "eslint-plugin-standard": "^3.0.1",
+    "file-loader": "^1.1.5",
+    "json-loader": "^0.5.7",
+    "mocha": "^4.0.1",
+    "node-sass": "^4.7.1",
+    "nodemon": "^1.12.1",
+    "resolve-url-loader": "^2.2.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.19.0",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.9.1"
   },
   "dependencies": {
-    "app-module-path": "^2.2.0",
-    "body-parser": "^1.17.1",
-    "classnames": "^2.2.5",
-    "compression": "^1.6.2",
-    "cors": "^2.8.1",
-    "express-history-api-fallback": "^2.1.0",
-    "feathers": "^2.1.1",
-    "feathers-authentication": "^0.7.12",
+    "add-event-listener": "0.0.1",
+    "body-parser": "^1.18.2",
+    "compression": "^1.7.1",
+    "cors": "^2.8.4",
+    "feathers": "^2.2.2",
+    "feathers-authentication": "^1.2.7",
+    "feathers-authentication-jwt": "^0.3.2",
+    "feathers-authentication-local": "^0.4.4",
     "feathers-configuration": "^0.4.1",
-    "feathers-errors": "^2.6.1",
-    "feathers-hooks": "^1.8.1",
-    "feathers-mongodb": "^2.8.0",
-    "feathers-rest": "^1.7.1",
-    "feathers-socketio": "^1.5.2",
-    "fs-promise": "^2.0.0",
-    "is-explicit": "^1.1.0",
-    "isomorphic-fetch": "^2.2.1",
-    "jsesc": "^2.4.0",
-    "object-assign": "^4.1.1",
-    "promise-polyfill": "^6.0.2",
-    "promise-queue": "^2.2.3",
-    "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-markdown": "^2.4.5",
-    "react-router": "^4.0.0-beta.7",
-    "react-router-dom": "^4.0.0-beta.7",
-    "serve-favicon": "^2.4.1"
+    "feathers-hooks": "^2.1.0",
+    "feathers-rest": "^1.8.0",
+    "feathers-schema": "^0.3.1",
+    "feathers-socketio": "^2.0.0",
+    "is-explicit": "^1.4.1",
+    "mobx": "^3.3.1",
+    "mobx-react": "^4.3.3",
+    "mobx-react-router": "^4.0.1",
+    "module-alias": "^2.0.1",
+    "mongodb": "^2.2.31",
+    "normalize.css": "^7.0.0",
+    "prop-types": "^15.6.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "serve-favicon": "^2.4.5",
+    "styled-components": "^2.2.1"
   }
 }
