--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "webpack:dev": "webpack-dev-server"
+    "webpack:dev": "webpack-dev-server",
+    "webpack": "webpack",
+    "db:dev": "./db/mongod --dbpath ./db/dev-data --port 4999",
+    "serve:dev": "ts-node-dev src/server/serve.ts --watch src"
   },
   "repository": {
     "type": "git",
@@ -21,8 +24,17 @@
   },
   "homepage": "https://github.com/GlobalMechanic/global-mechanic-www#readme",
   "devDependencies": {
+    "@types/compression": "^1.0.1",
+    "@types/cors": "^2.8.6",
+    "@types/fs-extra": "^8.0.1",
+    "@types/isomorphic-fetch": "0.0.35",
+    "@types/jsesc": "^2.5.0",
+    "@types/mongodb": "^2.2.25",
+    "@types/promise-queue": "^2.2.0",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/serve-favicon": "^2.5.0",
+    "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^2.16.0",
     "@typescript-eslint/parser": "^2.16.0",
@@ -37,10 +49,30 @@
     "react-dom": "^16.12.0",
     "styled-components": "^5.0.0",
     "ts-loader": "^6.2.1",
+    "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.4",
     "typescript-plugin-styled-components": "^1.4.3",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.10.1"
+  },
+  "dependencies": {
+    "aws-sdk": "^2.605.0",
+    "body-parser": "^1.19.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express-history-api-fallback": "^2.2.1",
+    "feathers": "^2.2.4",
+    "feathers-client": "^2.4.0",
+    "feathers-configuration": "^0.4.2",
+    "feathers-hooks": "^2.1.2",
+    "feathers-rest": "^1.8.1",
+    "fs-extra": "^8.1.0",
+    "isomorphic-fetch": "^2.2.1",
+    "jsesc": "^2.5.2",
+    "mongodb": "^2.2.36",
+    "promise-queue": "^2.2.5",
+    "serve-favicon": "^2.5.0",
+    "socket.io-client": "^2.3.0"
   }
 }
