backend typescript refactor finished
but it is quick, ugly and dirty.
No sense in spending too much time on it, it'll be obsolete when gears is rebuild anyhow.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack:dev": "webpack-dev-server",
     "webpack": "webpack",
-    "db:dev": "./db/mongod --dbpath ./db/dev-data --port 4999",
+    "db:dev": "./db/mongod --dbpath ./db/data --port 4999",
     "serve:dev": "ts-node-dev src/server/serve.ts --watch src"
   },
   "repository": {
@@ -45,8 +45,6 @@
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "normalize.css": "^8.0.1",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
     "styled-components": "^5.0.0",
     "ts-loader": "^6.2.1",
     "ts-node-dev": "^1.0.0-pre.44",
@@ -62,16 +60,21 @@
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express-history-api-fallback": "^2.2.1",
-    "feathers": "^2.2.4",
-    "feathers-client": "^2.4.0",
-    "feathers-configuration": "^0.4.2",
-    "feathers-hooks": "^2.1.2",
-    "feathers-rest": "^1.8.1",
+    "feathers": "^2.0.2",
+    "feathers-authentication": "^0.7.12",
+    "feathers-configuration": "^0.3.3",
+    "feathers-errors": "^2.2.0",
+    "feathers-hooks": "^1.5.8",
+    "feathers-mongodb": "^2.6.0",
+    "feathers-rest": "^1.5.0",
+    "feathers-socketio": "^1.4.2",
     "fs-extra": "^8.1.0",
     "isomorphic-fetch": "^2.2.1",
     "jsesc": "^2.5.2",
     "mongodb": "^2.2.36",
     "promise-queue": "^2.2.5",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "serve-favicon": "^2.5.0",
     "socket.io-client": "^2.3.0"
   }
