--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/promise-queue": "^2.2.0",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@types/react-router-dom": "^5.1.3",
     "@types/serve-favicon": "^2.5.0",
     "@types/socket.io-client": "^1.4.32",
     "@types/styled-components": "^4.4.2",
@@ -75,6 +76,7 @@
     "promise-queue": "^2.2.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2",
     "serve-favicon": "^2.5.0",
     "socket.io-client": "^2.3.0"
   }
