--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "fs-extra": "^8.1.0",
     "isomorphic-fetch": "^2.2.1",
     "jsesc": "^2.5.2",
+    "mime": "^2.4.4",
     "mongodb": "^2.2.36",
     "promise-queue": "^2.2.5",
     "react": "^16.12.0",
