page generation updated to reflect new changes in gears
no more of those hacky tags

--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack:dev": "webpack-dev-server",
-    "webpack": "webpack",
+    "webpack": "NODE_ENV=production webpack",
     "db:dev": "./db/mongod --dbpath ./db/data --port 4999",
-    "serve:dev": "ts-node-dev src/server/serve.ts --watch src"
+    "serve:dev": "ts-node-dev src/server/serve.ts --watch src",
+    "serve": "NODE_ENV=production node dist/server/serve.js",
+    "tsc": "tsc",
+    "start": "npm run serve"
   },
   "repository": {
     "type": "git",
