--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "promise-queue": "^2.2.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-markdown": "^4.3.1",
     "react-router-dom": "^5.1.2",
     "serve-favicon": "^2.5.0",
     "socket.io-client": "^2.3.0"
